--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
         "symfony/twig-bundle": "~2.1"
     },
     "suggest": {
-        "doctrine/common": "Needed to use the twig doctrine loader functionality."
+        "doctrine/common": "Needed to use the twig doctrine loader functionality.",
+        "symfony/validator": "Allows the twig constraint to be used"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
+        "symfony/validator": "~2.1",
         "doctrine/common": "~2.1"
     },
     "license": "MIT",
