--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,26 @@ language: php
 php: [5.3.3, 5.3, 5.4, 5.5, 5.6, hhvm]
 
 env:
-  - SYMFONY_VERSION=2.1.*
-  - SYMFONY_VERSION=2.2.*
-  - SYMFONY_VERSION=2.3.*
-  - SYMFONY_VERSION=2.4.*
   - SYMFONY_VERSION=2.5.*
 
 matrix:
+  fast_finish: true
+  include:
+  - php: 5.3.3
+    env: "SYMFONY_VERSION=2.1.* TWIG_VERSION=1.15"
+  - php: 5.5
+    env: "SYMFONY_VERSION=2.2.*"
+  - php: 5.5
+    env: "SYMFONY_VERSION=2.3.*"
+  - php: 5.5
+    env: "SYMFONY_VERSION=2.4.*"
   allow_failures:
   - php: hhvm
 
 before_script:
-  - sh -c 'if [ "$SYMFONY_VERSION" != "" ]; then composer require --no-update symfony/framework-bundle=$SYMFONY_VERSION; composer require --no-update symfony/twig-bundle=$SYMFONY_VERSION; fi;'
+  - sh -c 'if [ "$SYMFONY_VERSION" != "" ]; then composer require --no-update symfony/framework-bundle=$SYMFONY_VERSION; fi;'
+  - sh -c 'if [ "$SYMFONY_VERSION" != "" ]; then composer require --no-update symfony/twig-bundle=$SYMFONY_VERSION; fi;'
+  - sh -c 'if [ "$TWIG_VERSION" != "" ]; then composer require --no-update twig/twig=$TWIG_VERSION; fi;'
   - composer install --dev
   - mkdir -p build/logs
 
